--- a/javascriptv3/package.json
+++ b/javascriptv3/package.json
@@ -30,6 +30,7 @@
     "example_code/cross-services/feedback-sentiment-analyzer/TranslateText",
     "example_code/cross-services/photo-asset-manager",
     "example_code/cross-services/wkflw-topics-queues",
+    "example_code/cross-services/wkflw-resilient-service",
     "example_code/dynamodb",
     "example_code/ec2",
     "example_code/eventbridge",
