--- a/javascriptv3/example_code/cross-services/wkflw-resilient-service/package.json
+++ b/javascriptv3/example_code/cross-services/wkflw-resilient-service/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.431.0",
+    "@aws-sdk/client-ec2": "^3.433.0",
+    "@aws-sdk/client-iam": "^3.433.0",
     "@aws-sdk/lib-dynamodb": "^3.431.0"
   },
   "devDependencies": {
