JavaScript (v3): Resilient Wkflw - Add steps to deploy and destroy auto scaling group.

--- a/javascriptv3/example_code/cross-services/wkflw-resilient-service/package.json
+++ b/javascriptv3/example_code/cross-services/wkflw-resilient-service/package.json
@@ -9,6 +9,7 @@
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "dependencies": {
+    "@aws-sdk/client-auto-scaling": "^3.438.0",
     "@aws-sdk/client-dynamodb": "^3.431.0",
     "@aws-sdk/client-ec2": "^3.433.0",
     "@aws-sdk/client-iam": "^3.433.0",
