--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -681,11 +681,27 @@ cross_ResilientService:
             - description: Create a class that wraps &SYS; actions.
               snippet_tags:
                 - python.example_code.workflow.ResilientService_ParameterHelper
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/cross-services/wkflw-resilient-service
+          excerpts:
+            - description: Run the interactive scenario at a command prompt.
+              snippet_files:
+                - javascriptv3/example_code/cross-services/wkflw-resilient-service/index.js
+            - description: Create steps to deploy all of the resources.
+              snippet_files:
+                - javascriptv3/example_code/cross-services/wkflw-resilient-service/steps-deploy.js
+            - description: Create steps to run the demo.
+              snippet_files:
+                - javascriptv3/example_code/cross-services/wkflw-resilient-service/steps-demo.js
+            - description: Create steps to destroy all of the resources.
+              snippet_files:
+                - javascriptv3/example_code/cross-services/wkflw-resilient-service/steps-destroy.js
   services:
     auto-scaling: {
       CreateAutoScalingGroup, DescribeAutoScalingGroups, TerminateInstanceInAutoScalingGroup,
-      AttachLoadBalancerTargetGroups, DeleteAutoScalingGroup, DescribeAutoScalingGroups,
-      UpdateAutoScalingGroup}
+      AttachLoadBalancerTargetGroups, DeleteAutoScalingGroup, UpdateAutoScalingGroup}
     ec2: {
       DescribeIamInstanceProfileAssociations, ReplaceIamInstanceProfileAssociation, RebootInstances,
       CreateLaunchTemplate, DeleteLaunchTemplate, DescribeAvailabilityZones, DescribeInstances,
