--- a/python/example_code/bedrock-runtime/requirements.txt
+++ b/python/example_code/bedrock-runtime/requirements.txt
@@ -6,6 +6,7 @@ jmespath==1.0.1
 packaging==23.2
 pluggy==1.3.0
 pytest==7.4.3
+pytest-asyncio==0.21.1
 python-dateutil==2.8.2
 s3transfer==0.7.0
 six==1.16.0
