--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
-          node-version: "18.x"
-      - run: npm ci --prefix javascriptv3
+          node-version: "20.x"
+      - run: npm i --prefix javascriptv3
         name: Install dependencies
       - run: |
           changed_files=(${{steps.changed-files.outputs.all_changed_files}})
