--- a/javav2/example_code/bedrock/pom.xml
+++ b/javav2/example_code/bedrock/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>sts</artifactId>
         </dependency>
         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>bedrock</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20231013</version>
