--- a/.doc_gen/metadata/bedrock_metadata.yaml
+++ b/.doc_gen/metadata/bedrock_metadata.yaml
@@ -1,17 +1,16 @@
 # zexi 0.4.0
-bedrock-ListFoundationModels:
-  title: List the available foundation models using an &AWS; SDK
-  title_abbrev: List available foundation models
-  synopsis: list available foundation models
+bedrock_ListFoundationModels:
+  title: List the available &BRlong; foundation models using an &AWS; SDK
+  title_abbrev: List available &BR; foundation models
+  synopsis: list available &BR; foundation models
   category:
   languages:
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/bedrock
-          sdkguide:
           excerpts:
-            - description: List the available Bedrock foundation models
+            - description: List the available &BRlong; foundation models
               snippet_tags:
                 - python.example_code.bedrock.ListFoundationModels
   services:
