--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -72,8 +72,8 @@ bedrock-runtime_InvokeStableDiffusion:
 
 bedrock-runtime_InvokeModelWithResponseStream:
   title: Invoke the specified &BR; model on &BR; to run an inference with a response stream
-  title_abbrev: Invoke a model on $BR; with a response stream
-  synopsis: invoke an model on $BR; to run an inference with a response stream
+  title_abbrev: Invoke a model on &BR; with a response stream
+  synopsis: invoke an model on &BR; to run an inference with a response stream
   category:
   languages:
     Java:
@@ -81,7 +81,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke a model on $BR; and process the response stream
+            - description: Invoke a model on &BR; and process the response stream
               snippet_tags:
                 - bedrock-runtime.java2.invoke_model_with_response_stream.main
   services:
