--- a/.doc_gen/metadata/bedrock_metadata.yaml
+++ b/.doc_gen/metadata/bedrock_metadata.yaml
@@ -19,7 +19,7 @@ bedrock_Hello:
 bedrock_ListFoundationModels:
   title: List the available &BRlong; foundation models using an &AWS; SDK
   title_abbrev: List available &BR; foundation models
-  synopsis: list available &BR; foundation models
+  synopsis: list available &BR; foundation models.
   category:
   languages:
     Go:
@@ -27,7 +27,7 @@ bedrock_ListFoundationModels:
         - sdk_version: 2
           github: gov2/bedrock
           excerpts:
-            - description: List the available Bedrock foundation models
+            - description: List the available Bedrock foundation models.
               snippet_tags:
                 - gov2.bedrock.FoundationModelWrapper.struct
                 - gov2.bedrock.ListFoundationModels
@@ -36,7 +36,7 @@ bedrock_ListFoundationModels:
         - sdk_version: 2
           github: javav2/example_code/bedrock
           excerpts:
-            - description: List the available &BRlong; foundation models
+            - description: List the available &BRlong; foundation models.
               snippet_tags:
                 - bedrock.java2.list_foundation_models.main
     Python:
@@ -44,7 +44,7 @@ bedrock_ListFoundationModels:
         - sdk_version: 3
           github: python/example_code/bedrock
           excerpts:
-            - description: List the available &BRlong; foundation models
+            - description: List the available &BRlong; foundation models.
               snippet_tags:
                 - python.example_code.bedrock.ListFoundationModels
   services:
