--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -704,6 +704,14 @@ cross_FMPlayground:
       versions:
         - sdk_version: 3
           block_content: cross_FMPlayground_NetV3_block.xml
+    Java:
+      versions:
+        - sdk_version: 2
+          block_content: cross_FMPlayground_Java_block.xml
+    Python:
+      versions:
+        - sdk_version: 3
+          block_content: cross_FMPlayground_Python_block.xml
   service_main: bedrock-runtime
   services:
     bedrock-runtime:
