--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -70,6 +70,32 @@ bedrock-runtime_InvokeJurassic2:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeLlama2:
+  title: Invoke the Meta Llama 2 Chat model on &BR; to run an inference
+  title_abbrev: Invoke Meta Llama 2 on &BR;
+  synopsis: invoke the Meta Llama 2 Chat model on &BR; to run inference.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Meta Llama 2 foundation model.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_llama2.main
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrockruntime
+          sdkguide:
+          excerpts:
+            - description: Invoke the AI 21 Labs Jurassic-2 foundation model.
+              snippet_tags:
+                - python.example_code.bedrock-runtime.InvokeMetaLlama2
+  services:
+    bedrock-runtime: {InvokeModel}
+
 bedrock-runtime_InvokeStableDiffusion:
   title: Invoke the Stability.ai Stable Diffusion XL model on &BR; to run an inference
   title_abbrev: Invoke Stability.ai Stable Diffusion XL on &BR;
